--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,15 @@ export(plot_snp)
 export(run_finemap)
 exportClasses(FinemaprFinemap)
 import(cowplot)
+import(ggplot2)
 importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(magrittr,"%>%")
+importFrom(readr,read_delim)
+importFrom(readr,read_lines)
+importFrom(readr,write_delim)
+importFrom(readr,write_lines)
 importFrom(tibble,as_data_frame)
 importFrom(tibble,data_frame)
