caviar (no annotations) is supported

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,9 @@ Collate:
     'package.R'
     'finemap.R'
     'caviar.R'
+    'paintor.R'
+    'classMethods.R'
+    'classFinemaprPaintor.R'
     'classFinemaprFinemap.R'
     'classFinemaprCaviar.R'
     'zzz.R'
