--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(example_finemap)
 export(plot_config)
 export(plot_ncausal)
 export(plot_snp)
+export(read_ld)
+export(read_zscore)
 export(run_caviar)
 export(run_finemap)
 export(run_paintor)
