--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,23 +8,27 @@ S3method(plot_ncausal,FinemaprFinemap)
 S3method(plot_snp,Finemapr)
 S3method(plot_snp,FinemaprCaviar)
 S3method(plot_snp,FinemaprFinemap)
-S3method(print,Finemapr)
-S3method(print,FinemaprCaviar)
-S3method(print,FinemaprFinemap)
-S3method(print,FinemaprPaintor)
 export(example_finemap)
 export(plot_config)
 export(plot_ncausal)
 export(plot_snp)
+export(print.Finemapr)
+export(print.FinemaprCaviar)
+export(print.FinemaprFinemap)
+export(print.FinemaprPaintor)
 export(read_ld)
 export(read_zscore)
+export(ref_ld)
+export(ref_vcf)
 export(run_caviar)
 export(run_finemap)
 export(run_paintor)
+export(sumstats_bmi)
 exportClasses(Finemapr)
 exportClasses(FinemaprCaviar)
 exportClasses(FinemaprFinemap)
 exportClasses(FinemaprPaintor)
+import(Matrix)
 import(ggplot2)
 importFrom(cowplot,plot_grid)
 importFrom(dplyr,arrange)
@@ -35,6 +39,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%>%")
+importFrom(readr,cols)
 importFrom(readr,read_delim)
 importFrom(readr,read_lines)
 importFrom(readr,read_tsv)
