started unified interface: main function `finemapr`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,15 +12,19 @@ S3method(print,Finemapr)
 S3method(print,FinemaprCaviar)
 S3method(print,FinemaprFinemap)
 S3method(print,FinemaprPaintor)
+S3method(process_tab,Finemapr)
 export(example_finemap)
+export(finemapr)
 export(plot_config)
 export(plot_ncausal)
 export(plot_snp)
+export(process_tab)
 export(read_ld)
 export(read_zscore)
 export(run_caviar)
 export(run_finemap)
 export(run_paintor)
+export(sumstats_bmi)
 exportClasses(Finemapr)
 exportClasses(FinemaprCaviar)
 exportClasses(FinemaprFinemap)
@@ -33,8 +37,10 @@ importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(dplyr,select_)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%>%")
+importFrom(readr,cols)
 importFrom(readr,read_delim)
 importFrom(readr,read_lines)
 importFrom(readr,read_tsv)
