--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Suggests:
     rmarkdown
 Collate:
     'package.R'
+    'names.R'
     'sumstats.R'
     'read.R'
     'finemap.R'
@@ -30,6 +31,7 @@ Collate:
     'classFinemaprPaintor.R'
     'classFinemaprFinemap.R'
     'classFinemaprCaviar.R'
+    'finemapr.R'
     'zzz.R'
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
