finemapr (finemap); first working ver

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,22 +8,21 @@ S3method(plot_ncausal,FinemaprFinemap)
 S3method(plot_snp,Finemapr)
 S3method(plot_snp,FinemaprCaviar)
 S3method(plot_snp,FinemaprFinemap)
-<<<<<<< HEAD
-S3method(print,Finemapr)
-S3method(print,FinemaprCaviar)
-S3method(print,FinemaprFinemap)
-S3method(print,FinemaprPaintor)
+S3method(process_ld,Finemapr)
 S3method(process_tab,Finemapr)
+S3method(write_files,FinemaprFinemap)
 export(example_finemap)
 export(finemapr)
 export(plot_config)
 export(plot_ncausal)
 export(plot_snp)
-export(process_tab)
 export(print.Finemapr)
 export(print.FinemaprCaviar)
 export(print.FinemaprFinemap)
 export(print.FinemaprPaintor)
+export(process_ld)
+export(process_n)
+export(process_tab)
 export(read_ld)
 export(read_zscore)
 export(ref_ld)
@@ -32,6 +31,7 @@ export(run_caviar)
 export(run_finemap)
 export(run_paintor)
 export(sumstats_bmi)
+export(write_files)
 exportClasses(Finemapr)
 exportClasses(FinemaprCaviar)
 exportClasses(FinemaprFinemap)
