--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,6 +27,9 @@ Collate:
     'names.R'
     'sumstats.R'
     'read.R'
+    'datasets.R'
+    'files.R'
+    'plots.R'
     'finemap.R'
     'caviar.R'
     'paintor.R'
