`ref_ld` to compute LD from 1KG ref. panel; demo for BMI GWAS at FTO locus; fixing print/plot methods for FINEMAP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(collect_results,FinemaprFinemap)
 S3method(filename_config,FinemaprFinemap)
+S3method(filename_k,FinemaprFinemap)
 S3method(filename_ld,FinemaprFinemap)
 S3method(filename_log,FinemaprFinemap)
 S3method(filename_master,FinemaprFinemap)
@@ -23,6 +24,7 @@ S3method(write_files,FinemaprFinemap)
 export(collect_results)
 export(example_finemap)
 export(filename_config)
+export(filename_k)
 export(filename_ld)
 export(filename_log)
 export(filename_master)
@@ -40,10 +42,13 @@ export(print.FinemaprPaintor)
 export(process_ld)
 export(process_n)
 export(process_tab)
+export(proxysnps_ref_ld)
+export(proxysnps_ref_vcf)
 export(read_ld)
 export(read_zscore)
+export(ref_bed)
 export(ref_ld)
-export(ref_vcf)
+export(ref_pop)
 export(run_caviar)
 export(run_finemap)
 export(run_paintor)
@@ -71,6 +76,7 @@ importFrom(readr,read_delim)
 importFrom(readr,read_lines)
 importFrom(readr,read_tsv)
 importFrom(readr,write_delim)
+importFrom(readr,write_file)
 importFrom(readr,write_lines)
 importFrom(tibble,as_data_frame)
 importFrom(tibble,data_frame)
