started a function `cojo` for GCTA-COJO

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(run_tool,FinemaprFinemap)
 S3method(run_tool,FinemaprPaintor)
 S3method(write_files,FinemaprFinemap)
 S3method(write_files,FinemaprPaintor)
+export(cojo)
 export(collect_results)
 export(example_finemap)
 export(extract_credible_set)
@@ -92,6 +93,7 @@ importFrom(readr,read_tsv)
 importFrom(readr,write_delim)
 importFrom(readr,write_file)
 importFrom(readr,write_lines)
+importFrom(readr,write_tsv)
 importFrom(tibble,as_data_frame)
 importFrom(tibble,data_frame)
 importFrom(utils,head)
