fixing Collate in DESC; #8

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,9 @@ Collate:
     'package.R'
     'names.R'
     'sumstats.R'
+    'abf.R'
+    'cojo.R'
+    'utils.R'
     'read.R'
     'datasets.R'
     'files.R'
