--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ S3method(run_tool,FinemaprFinemap)
 S3method(run_tool,FinemaprPaintor)
 S3method(write_files,FinemaprFinemap)
 S3method(write_files,FinemaprPaintor)
+export(abf)
 export(cojo)
 export(collect_results)
 export(example_finemap)
@@ -64,6 +65,7 @@ export(ref_bed)
 export(ref_ld)
 export(ref_pop)
 export(run_caviar)
+export(run_cojo)
 export(run_finemap)
 export(run_paintor)
 export(run_tool)
